# TermEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: DOCS.md  color.md  video.md
examples/: a.out  loading.c  main.cpp  test.cpp
include/TermEngine/IO/: mouse.hpp
include/TermEngine/video/: color.hpp  video.hpp
include/Whacky-Engine/: color.hpp  video.hpp
lib/: all.h  color.h  video.h
lib/TermEngine/: CMakeLists.txt
lib/TermEngine/IO/: mouse.cpp
lib/TermEngine/video/: color.cpp  video.cpp
src/Whacky-Engine/: color.cpp  video.cpp
